--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,9 +2,14 @@ on:
   push:
     branches:
       - main
+    paths: 
+      - '**.go'
+      - 'go.mod'
+      - 'go.sum'
 
 jobs:
   deploy:
+    if: contains(github.event.head_commit.message, '[skip ci]') == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source branch
